Bug 1165248 - [FxA] The long email address will be cut off in 'Confirm Your Account' view. r=arthurcc

--- a/apps/settings/style/settings.css
+++ b/apps/settings/style/settings.css
@@ -1042,6 +1042,8 @@ ul li > label.range-icons.volume input {
 #fxa-unverified-text {
   padding-top: 0.8rem;
   -moz-margin-start: 6rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 /******************************************************************************
